force-app/main/default/objects/DM_Accrual_Entry__c/DM_Accrual_Entry__c.object-meta.xml
<CustomObject>
    <label>DM Accrual Entry</label>
    <nameField>
        <label>DM  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Accrual Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>