force-app/main/default/objects/DM_Accrual_Entry__c/fields/DM_Accounting_Entry__c.field-meta.xml
<CustomField>
    <fullName>DM_Accounting_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Accounting Entry</label>
    <referenceTo>clcommon__Accounting_Entry__c</referenceTo>
    <relationshipLabel>DM Accrual Entries</relationshipLabel>
    <relationshipName>DM_Accrual_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>