force-app/main/default/objects/DM_Accrual_Entry__c/fields/DM_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Amount__c</fullName>
    <label>DM Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>