force-app/main/default/objects/DM_Accrual_Entry__c/fields/DM_GL_Posted__c.field-meta.xml
<CustomField>
    <fullName>DM_GL_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM GL Posted</label>
    <type>Checkbox</type>
</CustomField>