force-app/main/default/objects/DM_Accrual_Entry__c/fields/DM_Internal_Accounting_Generated__c.field-meta.xml
<CustomField>
    <fullName>DM_Internal_Accounting_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Internal Accounting Generated</label>
    <type>Checkbox</type>
</CustomField>