force-app/main/default/objects/DM_Accrual_Entry__c/fields/Internal_Accounting_Reversal_Generated__c.field-meta.xml
<CustomField>
    <fullName>Internal_Accounting_Reversal_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Accounting Reversal Generated</label>
    <type>Checkbox</type>
</CustomField>